Offline pictures- operator connected already eliminate ID in history. There is a gap when see history in grid pane - ID issue

--- a/src/View/theme.css
+++ b/src/View/theme.css
@@ -91,8 +91,6 @@
 
 
 
-
-
 /*textara*/
 
 .text-area {
@@ -153,19 +151,7 @@ scrollbar
 
 }
 
-.list-view .scroll-bar:horizontal  .increment-arrow,
-.list-view .scroll-bar:horizontal  .decrement-arrow,
-.list-view .scroll-bar:horizontal  .increment-button,
-.list-view .scroll-bar:horizontal  .decrement-button {
-    -fx-padding:0;
-}
 
-.list-view .scroll-bar:vertical  .increment-arrow,
-.list-view .scroll-bar:vertical  .decrement-arrow,
-.list-view .scroll-bar:vertical  .increment-button,
-.list-view .scroll-bar:vertical  .decrement-button {
-    -fx-padding:0;
-}
 
 
 
@@ -179,9 +165,11 @@ scrollbar
 
 
 
-.list-view .scroll-bar:vertical .thumb {
+.scroll-bar:vertical .thumb {
     -fx-background-color:derive(black,80%);
 	-fx-padding:1.5;
+	-fx-border-color:white;
+	-fx-border-width:0px;
 
 }
 /*
@@ -233,22 +221,27 @@ scrollbar
 	-fx-padding:10px;
 }
 */
+
 .list-view{
     -fx-background-color:white;
     -fx-border-color:white;
     -fx-focus-color: white;
-
+    -fx-border-width:0 0 0 0 ;
+    -fx-padding:0;
+    -fx-border-insets:0 0 0 ;
 
 
 }
-
 
 .task-bar{
  -fx-background-color:#00aff0;
 }
 .list-cell{
-    -fx-background-color:transparent;
-    -fx-border-color:transparent;
+    -fx-background-color:white;
+    -fx-border-color:white;
+    -fx-border-width:0 0 0 0;
+
+
 }
 
 
@@ -260,7 +253,24 @@ scrollbar
     -fx-font-weight:bold;
 
 }
+
+.list-view .scroll-bar:horizontal  .increment-arrow,
+.list-view .scroll-bar:horizontal  .decrement-arrow,
+.list-view .scroll-bar:horizontal  .increment-button,
+.list-view .scroll-bar:horizontal  .decrement-button {
+    -fx-padding:0;
+}
+
+.list-view .scroll-bar:vertical  .increment-arrow,
+.list-view .scroll-bar:vertical  .decrement-arrow,
+.list-view .scroll-bar:vertical  .increment-button,
+.list-view .scroll-bar:vertical  .decrement-button {
+    -fx-padding:0;
+
+}
+
 /*
+
 .list-cell:even {
     -fx-background-color: white;
 }
@@ -271,11 +281,14 @@ scrollbar
 .list-cell:filled:hover {
     -fx-background-color: #BFE9F9; //=======#A1A1A1=============================
     -fx-text-fill: white;
+
+
 }
 
  .list-cell:filled:selected:hover{
      -fx-background-color: #BFE9F9; // ===========================================
      -fx-text-fill: white;
+
  }
 
  .closeButton{
